objects/IPM_Follow_Up_Activity__c.object
<CustomObject>
    <description>IPMG - Follow up activities related to various objects for IPMG.</description>
    <fields>
        <fullName>IPM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Follow Up Activities</relationshipLabel>
        <relationshipName>Follow_Up_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Date_Advised__c</fullName>
        <label>Date Advised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Insurer_Review_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurer Review Process</label>
        <referenceTo>IPM_Insurer_Review_Process__c</referenceTo>
        <relationshipLabel>Follow Up Activities</relationshipLabel>
        <relationshipName>Follow_Up_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Level_of_Concern__c</fullName>
        <label>Level of Concern</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Licence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licence</label>
        <referenceTo>GLS_Licence__c</referenceTo>
        <relationshipLabel>Follow Up Activities</relationshipLabel>
        <relationshipName>Follow_Up_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Risk_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk / Issue</label>
        <referenceTo>IPM_Risk_Issue__c</referenceTo>
        <relationshipLabel>Follow Up Activities</relationshipLabel>
        <relationshipName>Follow_Up_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Progress Monitoring</fullName>
                    <label>Monitoring</label>
                </value>
                <value>
                    <fullName>Strategic Impact</fullName>
                </value>
                <value>
                    <fullName>Mitigating Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Follow Up Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_Insurer_Review_Process__c</columns>
        <columns>IPM_Description__c</columns>
        <columns>IPM_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Follow_Up_Activities</fullName>
        <columns>NAME</columns>
        <columns>IPM_Insurer_Review_Process__c</columns>
        <columns>IPM_Description__c</columns>
        <columns>IPM_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Closed Follow Up Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Follow_Up_Activities</fullName>
        <columns>NAME</columns>
        <columns>IPM_Insurer_Review_Process__c</columns>
        <columns>IPM_Description__c</columns>
        <columns>IPM_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Follow Up Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Follow_Up_Activities</fullName>
        <columns>NAME</columns>
        <columns>IPM_Insurer_Review_Process__c</columns>
        <columns>IPM_Description__c</columns>
        <columns>IPM_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Open Follow Up Activities</label>
    </listViews>
    <nameField>
        <label>Follow Up Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Follow Up Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Date_Advised_must_be_populated</fullName>
        <active>true</active>
        <description>If the Follow Up Activity Type = Strategic Impact then the Date Advised must be populated.</description>
        <errorConditionFormula>TEXT( IPM_Type__c) = &quot;Strategic Impact&quot; &amp;&amp; TEXT(  IPM_Date_Advised__c) = &quot;&quot;</errorConditionFormula>
        <errorMessage>Date Advised must be selected for a Strategic Impact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_must_be_populated</fullName>
        <active>true</active>
        <description>If the Follow Up Activity Type = Monitoring then the Due Date must be populated.</description>
        <errorConditionFormula>TEXT( IPM_Type__c ) = &quot;Monitoring&quot; &amp;&amp; TEXT( IPM_Due_Date__c ) = &quot;&quot;</errorConditionFormula>
        <errorMessage>Due Date must be selected for a Monitoring record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Level_of_Concern_must_be_populated</fullName>
        <active>true</active>
        <description>If the Follow Up Activity Type = Strategic Impact then the Level of Concern must be populated.</description>
        <errorConditionFormula>TEXT(IPM_Type__c) = &quot;Strategic Impact&quot; &amp;&amp; TEXT( IPM_Level_of_Concern__c ) = &quot;&quot;</errorConditionFormula>
        <errorMessage>Level of Concern must be selected for a Strategic Impact.</errorMessage>
    </validationRules>
</CustomObject>